# AzureAITraining

./: .gitignore  00.rag-app.py  01.rag-streamlit.py  README.md  chatbot_agent.py  data-gather-agent.py  main.py  pyproject.toml  streamlit.sh
data orig/event_files/: 0101.txt  0102.txt  0103.txt  0104.txt  0105.txt  0106.txt  0107.txt  0108.txt  0109.txt  0110.txt  0111.txt  0112.txt  0201.txt  0202.txt  0203.txt  0204.txt  0205.txt  0206.txt  0207.txt  0208.txt  0209.txt  0210.txt  0211.txt
data orig/faq_files/: faq0101.txt  faq0201.txt  faq0202.txt  faq0301.txt  faq0302.txt  faq0303.txt  faq0304.txt  faq0305.txt  faq0306.txt  faq0307.txt  faq0308.txt  faq0309.txt  faq0310.txt  faq0311.txt  faq0401.txt  faq0402.txt  faq0403.txt  faq0404.txt  faq0405.txt  faq0406.txt  faq0407.txt  faq0408.txt  faq0409.txt  faq0410.txt  faq0411.txt  faq0501.txt  faq0502.txt  faq0503.txt  faq0601.txt  faq0602.txt  faq0603.txt  faq0604.txt  faq0605.txt  faq0606.txt  faq0607.txt  faq0608.txt  faq0609.txt  faq0701.txt  faq0702.txt  faq0703.txt  (+45 more)
data/event_files/: event0101.txt
data/faq_files/: faq0101.txt
